--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -4000,5 +4000,6 @@
     "CL_AU_AC_automation_features_may_not_execute_key": "Abhängig vom Betriebsmodus des Geräts können einige Funktionen möglicherweise nicht erfolgreich ausgeführt werden.",
     "CL_DV_OV_g800_mode_grill_fan_micro": "Großer Grill + Ventilator + Mikrowelle",
     "CL_DV_OV_baking_stopped": "Das Backen in ## wurde gestoppt.",
-    "CL_DV_OV_check_to_confirm": "Überprüfen Sie zur Bestätigung den Ofen."
+    "CL_DV_OV_check_to_confirm": "Überprüfen Sie zur Bestätigung den Ofen.",
+    "CL_CF_CO_buy": "Kaufen"
 }
