--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -3177,7 +3177,7 @@
     "charcoal_filters_content": "Kada se ugljeni filtri zamijene, odbrojavanje se mora RESETIRATI kako bi se pokazalo životni vijek novih filtara.",
     "filter_notification": "Obavijest o filteru",
     "filter_notification_content": "Postavite koliko dana unaprijed se šalje obavijest za čišćenje filtara na ugljen.",
-    "factory_reset": "Fabričko podešavanje",
+    "factory_reset": "Tvorničko podešavanje",
     "factory_reset_content": "Uređaj se može vratiti na tvorničke postavke.",
     "sound_settings_content": "Postavite glasnoću različitih zvukova u vašem vinskom ormariću.",
     "brightness_content": "Podesite svjetlinu zaslona uređaja.",
@@ -3211,7 +3211,7 @@
     "change_display_language_tips": "Promijenite jezik prikaza na svom uređaju.",
     "add_rooms": "Dodaj sobe",
     "adjust_brightness_tips": "Podesite svjetlinu na zaslonu vašeg uređaja.",
-    "climate_control": "Klima uređaj",
+    "climate_control": "Kontrola klime",
     "rooms_multi_key": "sobe",
     "devices_multi_key": "uređaji",
     "easy_view": "Jednostavan pogled",
@@ -3234,7 +3234,7 @@
     "my_address_desc": "",
     "reset_program_list_pop_tips": "Upravo ćete osvježiti popis popisa programa. Proces osvježavanja će onemogućiti korištenje uređaja na cca. 2 minute.",
     "stand_by_title": "Vaš uređaj je u stanju pripravnosti.",
-    "stand_by_content": "1.Pritisnite gumb za uključivanje više od 3 sekunde da biste promenili status.\n2.Ako ne radi, molim vas otključajte ga prvo.",
+    "stand_by_content": "1. Pritisnite gumb za uključivanje više od 3 sekunde da biste promenili status.\n2. Ako ne radi, prvo otključajte uređaj.",
     "hum_box_title": "",
     "hum_box_content": "",
     "hum_box_how": "",
@@ -3254,7 +3254,7 @@
     "air_care_elder": "",
     "drum_illumination_desc": "Osvjetljenje bubnja osvjetljava unutrašnjost bubnja, što vam pomaže prilikom punjenja i pražnjenja stroja - jednostavno je lakše vidjeti preostalu čarapu unutar bubnja. Također olakšava pregled prilikom čišćenja podizača i umetaka podizača.",
     "turn_on_drum_illumination": "Uključite/isključite osvjetljenje",
-    "wine_time": "Vrijeme",
+    "wine_time": "Put",
     "delete_account_camel_case": "Izbriši račun",
     "program_mode_desc": "Programski način rada omogućuje vam da prilagodite svoj program sušenja i prilagodite ga prema svojim potrebama. U nastavku možete pročitati o različitim načinima rada i njihovoj funkcionalnosti.",
     "program_mode_available": "Dostupni su sljedeći načini pranja:",
@@ -3301,7 +3301,7 @@
     "automatically_turn_on_the_ac_for_a_cooled_space_when_coming_home": "Automatski uključite klimatizaciju za rashlađeni prostor po povratku u kuću.",
     "pet": "ljubimac",
     "ensure_your_pets_are_comfortable_when_you_are_away": "Osigurajte ugodu svojim kućnim ljubimcima dok ste odsutni.",
-    "use_sleep_mode_for_a_good_night's_rest": "Koristite način spavanja za dobar noćni odmor.",
+    "use_sleep_mode_for_a_good_night's_rest": "Koristite način za spavanje za dobar noćni odmor.",
     "select_trigger": "ODABIR OKIDAČA",
     "manually_set": "Ručno postavljanje",
     "turn_on/off_the_routine_manually": "Ručno uključite/isključite rutinu",
@@ -3310,7 +3310,7 @@
     "example:_air_conditioner_turned_on": "Primjer: Klimatizacija uključena",
     "select_trigger_feature": "ODABIR ZNAČAJKE OKIDANJA",
     "weather": "Vrijeme",
-    "example:_temp_is_higher_than_28": "Primjer: Temperatura je viša od 28",
+    "example:_temp_is_higher_than_28": "Primjer: Temperatura je viša od 28℃",
     "weather_phenomenon": "Vremenska situacija",
     "sunny": "Sunčano",
     "cloudy": "Oblačno",
@@ -3320,7 +3320,7 @@
     "reposition_key": "Ponovno postavljanje",
     "history": "Povijest",
     "indoor_co2_concentration": "Koncentracija CO2 u zatvorenom prostoru",
-    "comfortable": "Udobno",
+    "comfortable": "Ugodno",
     "moist": "Vlažno",
     "location_key": "Mjesto",
     "example_go_back_to_home": "Primjer: Vrati se kući",
@@ -3368,10 +3368,10 @@
     "add_this_routine_to_home_page_key": "Dodajte ovu rutinu na početnu stranicu?",
     "add_trigger_key": "Dodaj okidač",
     "select_city_key": "",
-    "add_routines_instrcuction_key": "Dodajte rutine i stvorite rutine s vašim uređajima",
+    "add_routines_instrcuction_key": "Dodajte i stvorite rutine s vašim uređajima",
     "every_day_at_key ": "Svaki dan u ##",
-    "automation_condition_des_condition_key": "kada ## @@ **",
-    "automation_condition_des_is_key": "kada ## je @@ **",
+    "automation_condition_des_condition_key": "Kada ## @@ **",
+    "automation_condition_des_is_key": "Kada ## je @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
     "enter_city_key": "Unesite grad…",
@@ -3380,11 +3380,11 @@
     "no_scene_key": "nema scene",
     "add_new_scene_key": "dodaj novu scenu",
     "wm_stain_program_type_temp": "",
-    "wm_stain_program_desc": "U nastavku odaberite vrstu mrlja i tkaninu/temperaturu. Perilica će tada automatski odabrati optimalni program.",
+    "wm_stain_program_desc": "U nastavku odaberite vrstu mrlja i tkaninu/temperaturu. Perilica će na temelju toga automatski odabrati optimalni program.",
     "stain_type": "",
     "fabric_temperature": "",
     "high_water_level": "Visok vodostaj",
-    "small_load": "Malo opterećenje",
+    "small_load": "Mala količina rublja",
     "small_load_tips": "",
     "himit2": "",
     "himit2_setup1": "Provjerite je li Himit adapter uključen, pritisnite i držite tipku za resetiranje 3 sekunde dok WLAN lampica ne počne treptati.",
@@ -3431,7 +3431,7 @@
     "click_here": "",
     "oven_hi8_setup_1": "",
     "oven_hi8_setup_2": "",
-    "oven_hi8_setup_3": "Mreža uređaja sada je otvorena za povezivanje. \nKliknite DALJE kako bi nastavili.",
+    "oven_hi8_setup_3": "Mreža uređaja je otvorena za povezivanje idućih 5 minuta. \nKliknite DALJE kako bi nastavili.",
     "oven_hi8_pair_2": "",
     "oven_hi8_pair_3": "",
     "program_tank_a_desc": "",
@@ -3503,7 +3503,7 @@
     "display_board_and_master_communication": "Zaslonska ploča i glavna komunikacija",
     "door_status": "Stanje vrata",
     "inverter_board": "Inverterska ploča",
-    "clean_status": "Čisto stanje",
+    "clean_status": "Stanje čišćenja",
     "tomorrow": "Sutra",
     "have_added_x_inverters": "",
     "requst_qr_code_from_supplier": "",
@@ -3533,31 +3533,31 @@
     "blue_permission_off_pop_title": "ConnectLife koristi Bluetooth za pronalaženje, povezivanje i određivanje položaja uređaja u blizini. Uvijek možete promijeniti postavke u postavkama sustava svog telefona.",
     "blue_ios_setting": "",
     "blue_cancel": "NASTAVI BEZ BLUETOOTHA",
-    "blue_power_off_pop_title": "ConnectLife želi UKLJUČITI Bluetooth za ovaj uređaj",
+    "blue_power_off_pop_title": "ConnectLife želi uključiti Bluetooth za ovaj uređaj",
     "recommended": "",
-    "alexa_auth_title": "Želite li naručiti ConnectLife s Alexom?",
+    "alexa_auth_title": "Želite li povezati ConnectLife s Alexom?",
     "alexa_auth_desc": "Kliknite <b>Dopusti</b> da povežete svoj ConnectLife račun s Alexom.",
     "not_find_device": "Ne možete pronaći uređaj?",
     "found": "Pronađeno",
-    "search_again": "Pretraži ponovno",
-    "confirm_add": "Potvrdi Dodaj",
-    "search_device": "Pretraga Uređaja…",
+    "search_again": "pretraži ponovno",
+    "confirm_add": "POTVRDITE ZA DODAVANJE",
+    "search_device": "Pretraživanje uređaja…",
     "search_device_content": "Kliknite gumb \"Pretraži ponovno\" za ažuriranje popisa uređaja",
     "devices_manage": "Upravljanje uređajima",
     "goto_home": "Idite na početnu stranicu uređaja",
-    "show_result": "Prikaži rezultat",
-    "replace_router": "Zamijeni Router",
+    "show_result": "prikaži rezultat",
+    "replace_router": "zamijeni ruter",
     "attributes": "Atributi",
     "can_not_find_device": "Ne možete pronaći uređaj?",
     "state": "država",
     "unchanged": "Neizmenjeno",
-    "circle_key": "Krug",
+    "circle_key": "Ciklus",
     "swp_key": "SWP",
     "fast_dhw_des": "Kada se uključi, funkcija grijanja toplotne pumpe i rezervoara za vodu će se uključiti istovremeno kako bi se što brže proizvela topla voda.",
     "atw_night_des": "Kada se uključi, vanjska jedinica će se automatski prilagoditi načinu rada sa niskom bukom kako bi smanjila buku.",
     "atw_mute_des": "Kada se uključi, vanjska jedinica će automatski raditi u načinu rada sa niskom bukom prema vremenu koje je postavio žičani kontroler.",
     "period_key": "Razdoblje",
-    "room_assignment": "Dodjela Sobe",
+    "room_assignment": "Dodjela sobe",
     "system_add": "Sustavna Adresa",
     "blue_enable": "OMOGUĆITE BLUETOOTH",
     "program_sent_to_oven": "",
@@ -3598,7 +3598,7 @@
     "asko_oven_control": "",
     "asko_oven_show_date": "",
     "previous": "",
-    "allow": "Dopusti",
+    "allow": "Dozvoli",
     "dirty": "Prljavo",
     "hide": "",
     "see_all": "",
@@ -3634,7 +3634,7 @@
     "our_recommendation": "",
     "no_search_results": "",
     "let_us_try_another_word": "",
-    "no_device_search": "Nije pretražen nijedan uređaj",
+    "no_device_search": "Nije pronađen nijedan uređaj",
     "no_device_confirm": "Molimo potvrdite da je pristupnik učinkovito povezan s sustavom klimatizacije",
     "cook_with_##": "",
     "asko_oven_set_time_date": "",
@@ -3649,12 +3649,12 @@
     "asko_oven_adaptive_brightness": "",
     "online_tip": "online",
     "atw_tip": "ATW",
-    "close_all": "Zatvori Sve",
+    "close_all": "zatvori sve",
     "circle_mode_des": "Način rada kanala 1 i kanala 2 je isti",
     "select_c_m": "Odaberite Tip Kruga",
-    "favorite_name": "Omiljeno Ime",
-    "weekly_key": "Tjedno",
-    "all_day": "Cjelodnevni",
+    "favorite_name": "Omiljeno ime",
+    "weekly_key": "tjedno",
+    "all_day": "cjelodnevni",
     "asko_oven_display_setting_content": "",
     "asko_oven_brightness_content": "",
     "asko_oven_display_content": "Postavite veličinu fonta za tekst na vinskom zaslonu.",
@@ -3668,7 +3668,7 @@
     "asko_oven_brightness_light_content": "",
     "asko_oven_time_out_content": "",
     "asko_oven_control_settings": "",
-    "asko_oven_control_setting_content": "Postavite svjetlinu zaslona vašeg uređaja, promijenite temu boja, veličinu fonta i postavite kada zaslon vašeg uređaja prelazi u stanje pripravnosti.",
+    "asko_oven_control_setting_content": "Postavite svjetlinu zaslona vašeg uređaja, promijenite temu, veličinu fonta i postavite kada zaslon vašeg uređaja prelazi u stanje pripravnosti.",
     "asko_oven_camera_content": "",
     "asko_oven_proximity_sensor": "Senzor blizine",
     "asko_oven_proximity_sensor_content": "",
@@ -4000,5 +4000,6 @@
     "CL_AU_AC_automation_features_may_not_execute_key": "Ovisno o načinu rada uređaja, neke se značajke možda neće uspješno izvršiti.",
     "CL_DV_OV_g800_mode_grill_fan_micro": "Veliki žar + ventilator + mikrovalovi",
     "CL_DV_OV_baking_stopped": "Pečenje u ## je zaustavljeno.",
-    "CL_DV_OV_check_to_confirm": "Provjerite pećnicu za potvrdu."
+    "CL_DV_OV_check_to_confirm": "Provjerite pećnicu za potvrdu.",
+    "CL_CF_CO_buy": "Kupiti"
 }
