--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -4000,5 +4000,6 @@
     "CL_AU_AC_automation_features_may_not_execute_key": "W zależności od trybu pracy urządzenia niektóre funkcje mogą nie zostać pomyślnie wykonane.",
     "CL_DV_OV_g800_mode_grill_fan_micro": "Duży grill +  wentylator + mikrofalówka",
     "CL_DV_OV_baking_stopped": "Pieczenie w ## zostało zatrzymane.",
-    "CL_DV_OV_check_to_confirm": "Sprawdź piekarnik, aby potwierdzić."
+    "CL_DV_OV_check_to_confirm": "Sprawdź piekarnik, aby potwierdzić.",
+    "CL_CF_CO_buy": "Kupić"
 }
