--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -4000,5 +4000,6 @@
     "CL_AU_AC_automation_features_may_not_execute_key": "V závislosti od prevádzkového režimu zariadenia sa niektoré funkcie nemusia úspešne spustiť.",
     "CL_DV_OV_g800_mode_grill_fan_micro": "Veľký gril + ventilátor + mikrovlnná rúra",
     "CL_DV_OV_baking_stopped": "Pečenie v ## bolo zastavené.",
-    "CL_DV_OV_check_to_confirm": "Skontrolujte rúru a potvrďte."
+    "CL_DV_OV_check_to_confirm": "Skontrolujte rúru a potvrďte.",
+    "CL_CF_CO_buy": "Kúpiť"
 }
