--- a/language/i18n_sr_BA.json
+++ b/language/i18n_sr_BA.json
@@ -3579,73 +3579,73 @@
     "blue_permission_off_title_add_device": "Bluetooth je onemogućen za ConnectLife",
     "time_care_desc": "",
     "refr_exit_super_cool_tips": "",
-    "refr_exit_super_freeze_tips": "",
-    "enter_recipe_name": "",
-    "results": "",
-    "no_favourite_recipes": "",
-    "no_favourite_recipes_desc": "",
-    "management": "",
-    "clear_all_favourites": "",
-    "dish_type": "",
-    "main_ingredients": "",
-    "diet": "",
-    "nutrition": "",
-    "wine_pairing": "",
+    "refr_exit_super_freeze_tips": "Сада укључите режим супер хлађења и изађите из режима супер смрзавања",
+    "enter_recipe_name": "Унесите назив рецепта...",
+    "results": "резултати",
+    "no_favourite_recipes": "Нема омиљених рецепата",
+    "no_favourite_recipes_desc": "Кликните на симбол ## на рецепту да бисте додали омиљени рецепт.",
+    "management": "управљање",
+    "clear_all_favourites": "Обриши све фаворите",
+    "dish_type": "Врста јела",
+    "main_ingredients": "Главни састојци",
+    "diet": "Дијета",
+    "nutrition": "Исхрана",
+    "wine_pairing": "Упаривање вина",
     "start_end_tip": "“Време почетка” и “Време завршетка” не могу бити исти.",
-    "filter_result_of": "",
-    "asko_oven_language": "",
-    "asko_oven_modes": "Režimi",
-    "asko_oven_control": "",
-    "asko_oven_show_date": "",
-    "previous": "",
-    "allow": "Dozvoli",
-    "dirty": "Prljavo",
-    "hide": "",
-    "see_all": "",
-    "recipe_allergens_mustand_seeds": "",
-    "recipe_difficulties_challenging": "",
-    "recipe_difficulties_beginner": "",
-    "recipe_type_breakfast": "",
-    "recipe_type_desserts": "",
-    "recipe_type_lunches": "",
-    "recipe_type_main_dishes": "",
-    "recipe_type_sider_disher": "Prilog",
-    "recipe_main_ingredients_vegetables": "",
-    "recipe_main_ingredients_savoury_pastries": "",
-    "recipe_main_ingredients_grains": "",
-    "recipe_main_ingredients_potatoes": "",
-    "recipe_main_ingredients_bread": "",
-    "recipe_main_ingredients_meat": "",
-    "recipe_main_ingredients_fish_seafood": "",
-    "recipe_main_ingredients_chicken": "",
-    "recipe_main_ingredients_milk": "",
-    "recipe_main_ingredients_tacos_wraps": "",
-    "recipe_main_ingredients_game": "",
-    "recipe_nutrition_high_fiber": "",
-    "recipe_nutrition_low_sugars": "",
-    "recipe_nutrition_low_fat": "",
-    "recipe_nutrition_low_sodium": "",
-    "recipe_nutrition_high_protein": "",
-    "recipe_nutrition_low_carb": "",
-    "recipe_nutrition_sugar_free": "",
-    "recipe_under_##_mins": "",
-    "recipe_more_than_##_mins": "",
-    "recipe_assistant_more_options": "",
-    "our_recommendation": "",
-    "no_search_results": "",
-    "let_us_try_another_word": "",
-    "no_device_search": "Nije pretražen nijedan uređaj",
+    "filter_result_of": "Резултат филтера \"##\"",
+    "asko_oven_language": "Језик",
+    "asko_oven_modes": "Режими",
+    "asko_oven_control": "Контрола",
+    "asko_oven_show_date": "Прикажи датум",
+    "previous": "Претходно",
+    "allow": "Дозволи",
+    "dirty": "Прљаво",
+    "hide": "Сакриј",
+    "see_all": "Види све",
+    "recipe_allergens_mustand_seeds": "Семенке сенфа",
+    "recipe_difficulties_challenging": "Изазовно",
+    "recipe_difficulties_beginner": "Лако",
+    "recipe_type_breakfast": "Доручак",
+    "recipe_type_desserts": "Дезерти",
+    "recipe_type_lunches": "Ручкови",
+    "recipe_type_main_dishes": "Главна јела",
+    "recipe_type_sider_disher": "Прилози",
+    "recipe_main_ingredients_vegetables": "Поврће",
+    "recipe_main_ingredients_savoury_pastries": "Слана пецива",
+    "recipe_main_ingredients_grains": "Житарице",
+    "recipe_main_ingredients_potatoes": "Кромпир",
+    "recipe_main_ingredients_bread": "Хлеб",
+    "recipe_main_ingredients_meat": "МЕСО",
+    "recipe_main_ingredients_fish_seafood": "Риба и морски плодови",
+    "recipe_main_ingredients_chicken": "Пилетина",
+    "recipe_main_ingredients_milk": "Млеко",
+    "recipe_main_ingredients_tacos_wraps": "Такоси и тортиље",
+    "recipe_main_ingredients_game": "Игра",
+    "recipe_nutrition_high_fiber": "Висок садржај влакана",
+    "recipe_nutrition_low_sugars": "Низак садржај шећера",
+    "recipe_nutrition_low_fat": "Низак садржај масти",
+    "recipe_nutrition_low_sodium": "Низак садржај натријума",
+    "recipe_nutrition_high_protein": "Висок садржај протеина",
+    "recipe_nutrition_low_carb": "Низак садржај угљених хидрата",
+    "recipe_nutrition_sugar_free": "Без шећера",
+    "recipe_under_##_mins": "Мање од ## минута",
+    "recipe_more_than_##_mins": "Више од ## минута",
+    "recipe_assistant_more_options": "Прецизирајте захтеве за прецизније препоруке. (Опционално)",
+    "our_recommendation": "Наша препорука",
+    "no_search_results": "Нема резултата претраге",
+    "let_us_try_another_word": "Хајде да пробамо другу реч.",
+    "no_device_search": "Ниједан уређај није пронађен",
     "no_device_confirm": "Молим вас да потврдите да је пролаз ефикасно повезан са системом за климатизацију",
-    "cook_with_##": "",
-    "asko_oven_set_time_date": "",
-    "asko_oven_set_language": "",
-    "asko_oven_set_settings": "",
-    "asko_oven_time_date_automatic": "",
-    "select_at_least_one_oven": "",
-    "the_limit_has_been_reached": "",
-    "let_us_try_other_options": "",
-    "found_##_search_results": "",
-    "wm_program_mode_time_care_1_desc": "",
+    "cook_with_##": "кувајте са ##",
+    "asko_oven_set_time_date": "Изаберите датум, време и формат времена за вашу рерну.",
+    "asko_oven_set_language": "Изаберите језик за рерну.",
+    "asko_oven_set_settings": "Подесите време и језик за рерну.",
+    "asko_oven_time_date_automatic": "Време - датум аутоматски",
+    "select_at_least_one_oven": "Молимо вас да изаберете најмање једну рерну за слање.",
+    "the_limit_has_been_reached": "Не може се мењати, ограничење је достигнуто.",
+    "let_us_try_other_options": "Хајде да пробамо неке друге опције.",
+    "found_##_search_results": "Пронашли смо ## резултата претраге за вас.",
+    "wm_program_mode_time_care_1_desc": "Када је ова функција активирана, програм прања ће се извршити са краћим трајањем прања.",
     "asko_oven_adaptive_brightness": "Прилагодљива осветљеност",
     "online_tip": "на мрежи",
     "atw_tip": "АТВ",
@@ -4000,5 +4000,6 @@
     "CL_AU_AC_automation_features_may_not_execute_key": "У зависности од режима рада уређаја, неке функције се можда неће успешно извршити.",
     "CL_DV_OV_g800_mode_grill_fan_micro": "Велики роштиљ + Вентилатор + Микроталасна рерна",
     "CL_DV_OV_baking_stopped": "Печење у ## је заустављено.",
-    "CL_DV_OV_check_to_confirm": "Проверите рерну да бисте потврдили."
+    "CL_DV_OV_check_to_confirm": "Проверите рерну да бисте потврдили.",
+    "CL_CF_CO_buy": "Купи"
 }
