--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -4000,5 +4000,6 @@
     "CL_AU_AC_automation_features_may_not_execute_key": "V závislosti na provozním režimu zařízení nemusí být některé funkce provedeny úspěšně.",
     "CL_DV_OV_g800_mode_grill_fan_micro": "Velký gril + ventilátor + mikrovlnná trouba",
     "CL_DV_OV_baking_stopped": "Pečení v ## bylo zastaveno.",
-    "CL_DV_OV_check_to_confirm": "Zkontrolujte troubu a potvrďte."
+    "CL_DV_OV_check_to_confirm": "Zkontrolujte troubu a potvrďte.",
+    "CL_CF_CO_buy": "Nakoupit"
 }
