--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4000,5 +4000,6 @@
     "CL_AU_AC_automation_features_may_not_execute_key": "Με βάση τον τρόπο λειτουργίας της συσκευής, ορισμένες λειτουργίες ενδέχεται να μην εκτελεστούν με επιτυχία.",
     "CL_DV_OV_g800_mode_grill_fan_micro": "Μεγάλο γκριλ + Ανεμιστήρας + Μικροκύματα",
     "CL_DV_OV_baking_stopped": "Το ψήσιμο στο ## διακόπηκε.",
-    "CL_DV_OV_check_to_confirm": "Ελέγξτε τον φούρνο για επιβεβαίωση."
+    "CL_DV_OV_check_to_confirm": "Ελέγξτε τον φούρνο για επιβεβαίωση.",
+    "CL_CF_CO_buy": "Αγορά"
 }
