--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -4000,5 +4000,6 @@
     "CL_AU_AC_automation_features_may_not_execute_key": "Berdasarkan mode pengoperasian perangkat, beberapa fitur mungkin tidak berhasil dijalankan.",
     "CL_DV_OV_g800_mode_grill_fan_micro": "Pemanggang besar + Kipas + Microwave",
     "CL_DV_OV_baking_stopped": "Memanggang di ## dihentikan.",
-    "CL_DV_OV_check_to_confirm": "Periksa oven untuk mengonfirmasi."
+    "CL_DV_OV_check_to_confirm": "Periksa oven untuk mengonfirmasi.",
+    "CL_CF_CO_buy": "Membeli"
 }
