--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4000,5 +4000,6 @@
     "CL_AU_AC_automation_features_may_not_execute_key": "Құрылғының жұмыс режиміне байланысты кейбір мүмкіндіктер сәтті орындалмауы мүмкін.",
     "CL_DV_OV_g800_mode_grill_fan_micro": "Үлкен гриль + желдеткіш + СВЧ (Қысқа толқынды пеш)",
     "CL_DV_OV_baking_stopped": "## ішінде пісіру тоқтатылды.",
-    "CL_DV_OV_check_to_confirm": "Растау үшін пешті тексеріңіз."
+    "CL_DV_OV_check_to_confirm": "Растау үшін пешті тексеріңіз.",
+    "CL_CF_CO_buy": "Сатып алу"
 }
