--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -4000,5 +4000,6 @@
     "CL_AU_AC_automation_features_may_not_execute_key": "장치의 작동 모드에 따라 일부 기능이 성공적으로 실행되지 않을 수 있습니다.",
     "CL_DV_OV_g800_mode_grill_fan_micro": "대형 그릴 + 선풍기 + 전자레인지",
     "CL_DV_OV_baking_stopped": "##에서 베이킹이 중지되었습니다.",
-    "CL_DV_OV_check_to_confirm": "오븐을 확인하여 확인하세요."
+    "CL_DV_OV_check_to_confirm": "오븐을 확인하여 확인하세요.",
+    "CL_CF_CO_buy": "구입하다"
 }
