--- a/language/i18n_ku_TR.json
+++ b/language/i18n_ku_TR.json
@@ -4000,5 +4000,6 @@
     "CL_AU_AC_automation_features_may_not_execute_key": "",
     "CL_DV_OV_g800_mode_grill_fan_micro": "",
     "CL_DV_OV_baking_stopped": "",
-    "CL_DV_OV_check_to_confirm": ""
+    "CL_DV_OV_check_to_confirm": "",
+    "CL_CF_CO_buy": "Kirrîn"
 }
