--- a/language/i18n_mk_MK.json
+++ b/language/i18n_mk_MK.json
@@ -4000,5 +4000,6 @@
     "CL_AU_AC_automation_features_may_not_execute_key": "Врз основа на режимот на работа на уредот, некои функции може да не се извршат успешно.",
     "CL_DV_OV_g800_mode_grill_fan_micro": "Голема скара + Вентилатор + Микробранова печка",
     "CL_DV_OV_baking_stopped": "Печењето во ## беше прекинато.",
-    "CL_DV_OV_check_to_confirm": "Проверете ја рерната за да потврдите."
+    "CL_DV_OV_check_to_confirm": "Проверете ја рерната за да потврдите.",
+    "CL_CF_CO_buy": "Купи"
 }
