--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -4000,5 +4000,6 @@
     "CL_AU_AC_automation_features_may_not_execute_key": "Berdasarkan mod pengendalian peranti, beberapa ciri mungkin tidak berjaya dilaksanakan.",
     "CL_DV_OV_g800_mode_grill_fan_micro": "Gril besar + Kipas + Ketuhar gelombang mikro",
     "CL_DV_OV_baking_stopped": "Pembakaran dalam ## telah dihentikan.",
-    "CL_DV_OV_check_to_confirm": "Periksa ketuhar untuk mengesahkan."
+    "CL_DV_OV_check_to_confirm": "Periksa ketuhar untuk mengesahkan.",
+    "CL_CF_CO_buy": "Beli"
 }
