--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4000,5 +4000,6 @@
     "CL_AU_AC_automation_features_may_not_execute_key": "В зависимости от режима работы устройства некоторые функции могут выполняться некорректно.",
     "CL_DV_OV_g800_mode_grill_fan_micro": "Большой гриль + вентилятор + микроволны",
     "CL_DV_OV_baking_stopped": "Выпечка в ## была остановлена.",
-    "CL_DV_OV_check_to_confirm": "Проверьте духовку, чтобы убедиться."
+    "CL_DV_OV_check_to_confirm": "Проверьте духовку, чтобы убедиться.",
+    "CL_CF_CO_buy": "Купить"
 }
