--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -4000,5 +4000,6 @@
     "CL_AU_AC_automation_features_may_not_execute_key": "Glede na način delovanja naprave nekatere funkcije morda ne bodo uspešno izvedene.",
     "CL_DV_OV_g800_mode_grill_fan_micro": "Veliki žar + Ventilator + Mikrovalovi",
     "CL_DV_OV_baking_stopped": "Peka v ## je bila ustavljena.",
-    "CL_DV_OV_check_to_confirm": "Za potrditev preverite pečico."
+    "CL_DV_OV_check_to_confirm": "Za potrditev preverite pečico.",
+    "CL_CF_CO_buy": "Nakup"
 }
