--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -4000,5 +4000,6 @@
     "CL_AU_AC_automation_features_may_not_execute_key": "Baserat på enhetens driftläge kanske vissa funktioner inte körs korrekt.",
     "CL_DV_OV_g800_mode_grill_fan_micro": "Stor grill + Fläkt + Mikro",
     "CL_DV_OV_baking_stopped": "Bakningen i ## stoppades.",
-    "CL_DV_OV_check_to_confirm": "Kontrollera ugnen för att bekräfta."
+    "CL_DV_OV_check_to_confirm": "Kontrollera ugnen för att bekräfta.",
+    "CL_CF_CO_buy": "Köpa"
 }
