--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4000,5 +4000,6 @@
     "CL_AU_AC_automation_features_may_not_execute_key": "ขึ้นอยู่กับโหมดการทำงานของอุปกรณ์ คุณสมบัติบางอย่างอาจไม่สามารถทำงานได้สำเร็จ",
     "CL_DV_OV_g800_mode_grill_fan_micro": "เตาปิ้งย่างขนาดใหญ่+พัดลม+ไมโครเวฟ",
     "CL_DV_OV_baking_stopped": "การอบใน ## หยุดแล้ว",
-    "CL_DV_OV_check_to_confirm": "ตรวจสอบเตาอบเพื่อยืนยัน"
+    "CL_DV_OV_check_to_confirm": "ตรวจสอบเตาอบเพื่อยืนยัน",
+    "CL_CF_CO_buy": "ซื้อ"
 }
