--- a/language/i18n_zh_TW.json
+++ b/language/i18n_zh_TW.json
@@ -3254,7 +3254,7 @@
     "air_care_elder": "長老",
     "drum_illumination_desc": "滚筒照明照亮滚筒内部，这有助于您在装载和清空机器时 - 更容易看到滚筒内剩余的袜子。它还能在清洁搅拌叶片时帮助照明。",
     "turn_on_drum_illumination": "打开/关闭照明灯",
-    "wine_time": "定時洗程",
+    "wine_time": "次",
     "delete_account_camel_case": "刪除帳號",
     "program_mode_desc": "程序模式可讓您自訂乾燥程序並根據您的需求進行調整。您可以在下面了解不同的模式及其功能。",
     "program_mode_available": "有以下洗滌模式可供選擇：",
@@ -4000,5 +4000,6 @@
     "CL_AU_AC_automation_features_may_not_execute_key": "根據設備的操作模式，某些功能可能無法成功執行。",
     "CL_DV_OV_g800_mode_grill_fan_micro": "顶部双圈加热+风扇+微波",
     "CL_DV_OV_baking_stopped": "## 烘烤停止。",
-    "CL_DV_OV_check_to_confirm": "檢查烤箱以確認。"
+    "CL_DV_OV_check_to_confirm": "檢查烤箱以確認。",
+    "CL_CF_CO_buy": "買"
 }
